name:                swagger-test
version:             0.2.4
synopsis:            Testing of Swagger APIs
description:         This package provides a library and executable tool
                     that supports testing APIs specified with Swagger. It
                     allows one to generate arbitrary Swagger requests for any
                     given specification.
homepage:            https://github.com/rodrigosetti/swagger-test
bug-reports:         https://github.com/rodrigosetti/swagger-test/issues
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Setti
maintainer:          rodrigosetti@gmail.com
copyright:           2017 Rodrigo Setti. All rights reserved
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
stability:           alpha

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Test.Swagger
                     , Test.Swagger.Gen
                     , Test.Swagger.Print
                     , Test.Swagger.Report
                     , Test.Swagger.Request
                     , Test.Swagger.Types
                     , Test.Swagger.Validate
  other-modules:     Paths_swagger_test
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck == 2.10.*
                     , aeson
                     , async
                     , attoparsec
                     , binary
                     , blaze-html
                     , bytestring
                     , case-insensitive
                     , containers
                     , filepath
                     , http-client
                     , http-client-tls
                     , http-media
                     , http-types
                     , insert-ordered-containers
                     , lens
                     , random
                     , scientific
                     , swagger2
                     , syb
                     , text
                     , unordered-containers
                     , vector

executable swagger-test
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_swagger_test
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , async
                     , bytestring
                     , directory
                     , filepath
                     , lens
                     , optparse-applicative
                     , random
                     , swagger-test
                     , swagger2
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rodrigosetti/swagger-test
